# CSCI450-Team101

./: .gitignore  README.md  linttest.py  pyproject.toml  requirements.txt  run  urls.txt
.github/workflows/: ci.yml
src/cli/: main.py
src/core/: __init__.py  cli.py  compute.py  github.py  hf_api.py  io_ndjson.py  logging_cfg.py  metrics.py  parallel.py  url.py  url_kind.py
src/metrics/: __init__.py  availability.py  base.py  bus_factor.py  code_quality.py  dataset_code.py  dataset_quality.py  license.py  performance_claims.py  size.py
src/ndjsonio/: ndjson.py
src/providers/: purdue_genai.py
tests/: conftest.py  test_cli.py  test_compute.py  test_github.py  test_hf_api.py  test_io_ndjson.py  test_logging_cfg.py  test_metrics_availability.py  test_metrics_bus_factor.py  test_metrics_code_quality.py  test_metrics_code_quality_repo.py  test_metrics_dataset_code.py  test_metrics_dataset_quality.py  test_metrics_license.py  test_metrics_performance_claims.py  test_metrics_size.py  test_smoke.py  test_url.py
